--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,5 @@
 project('com.github.Mohammed-Taher.majeed', 'vala', 'c')
 
-executable(
-		meson.project_name(),
-		'src/Main.vala',
-		'src/Window.vala',
-		'src/HeaderBar.vala',
-		'src/TextView.vala',
-		'src/Application.vala',
-		dependencies: [
-			dependency('gtk+-3.0'),
-			dependency('gio-2.0')
-			],
-		install: true
-)
+subdir('src')
+subdir('data')
+meson.add_install_script('meson/post_install.py') 
