--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,9 @@ executable(
 		'Main.vala',
 		
 		'Application.vala',
+		'Dialogs/About.vala',
+                'Dialogs/Keyboard.vala',
+                'Dialogs/Preferences.vala',
 
 		'Layout/Window.vala',
 		'Layout/HeaderBar.vala',
@@ -11,7 +14,8 @@ executable(
 
 		dependencies: [
 			dependency('gtk+-3.0'),
-			dependency('gio-2.0')
+			dependency('gio-2.0'),
+			dependency('goocanvas-2.0')
 			],
 		install: true
 )
